--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "admin/test",
+    "name": "cuigeg/test",
     "description": "first composer pack",
     "type": "library",
     "authors": [
